# Lab6

./: .gitignore
Lab6/: CMakeLists.txt
Lab6/headers/: solve.h
Lab6/scripts/: build.sh
Lab6/source/: main.cpp  solve.cpp
Lab6/src/: solve.cpp
Lab6/tests/: tests.cpp
Libs/headers/: UsefulLib.h
Libs/src/: UsefulLib.cpp  main.cpp
